--- a/src/progressbar.css
+++ b/src/progressbar.css
@@ -4,14 +4,12 @@
     border-radius: 10px;
     background-color: white;
     box-shadow: rgba(100, 149, 237, 0.3) 0px 7px 29px 0px;
+    margin: 20px;
 }
 
 .progress {
-    height: 20px;
+    height: 100%;
     border-radius: 10px;
-    min-width: 0%;
-    max-width: 100%;
-    width: 20%;
     background-color: rgb(100, 149, 237);
     font-size: 10px;
     justify-content: center;
@@ -19,4 +17,5 @@
     text-align: right;
     padding-right: 11px;
     color: white;
+    transition: 1s ease;
 }
