--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,13 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
 }
+.App {
+    padding: 20px;
+}
 
-code {
-  padding-left: 20px;
+.componentContainer {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
